--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 </div>
 
 <div class="section" id="contact">
-  <div class="cc-contact-information" style="background-image: url('images/map.png');">
+  <div class="cc-contact-information" style="background-image: url('images/map.jpg');">
     <div class="container">
       <div class="cc-contact">
         <div class="row">
